typescript/checker/tests/conformance/scanner/ecmascript3/scannerES3NumericLiteral4.ts.stderr
error: Expected +, - or decimal digit after e
 --> $DIR/tests/conformance/scanner/ecmascript3/scannerES3NumericLiteral4.ts:1:3
  |
1 | 1e
  |   ^

